--- a/src/stylemob.css
+++ b/src/stylemob.css
@@ -318,6 +318,24 @@
         margin: 0 40vw 70vw 0;
     }
 
+    .imgsaptos p {
+        color: white;
+        margin: 1vw 0vw;
+        font-size: 4 vw;
+    }
+
+    .verde button {
+        border: none;
+        background-color: #fff;
+        color: #4e7586;
+        margin: 0 auto 5vw;
+        width: 32vw;
+        height: 10vw;
+        font-size: 2vw;
+        font-weight: bold;
+        border-radius: 5px;
+    }
+
     .imgsaptos:nth-of-type(2) h1 {
         position: absolute;
         color: white;
@@ -404,7 +422,28 @@
         margin: 40px 0;
     }
 }
+ /*footer*/
+@media (max-width: 510px){
+    .footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+        background-color: #608661;
+        width: 100%;
+    }
 
+    .footer h1{
+        font-family: "Poppins", serif;
+        color: white;
+        font-size: 3vw;
+    }
+
+    .footer a{
+        text-decoration: none;
+        color: white;
+    }
+}
 /*form*/
 @media (max-width: 510px) {
     body {
