--- a/src/stylemob.css
+++ b/src/stylemob.css
@@ -329,9 +329,9 @@
         background-color: #fff;
         color: #4e7586;
         margin: 0 auto 5vw;
-        width: 32vw;
-        height: 10vw;
-        font-size: 2vw;
+        width: 45vw;
+        height: 12vw;
+        font-size: 4vw;
         font-weight: bold;
         border-radius: 5px;
     }
@@ -350,9 +350,9 @@
         background-color: #fff;
         color: #4e7586;
         margin-top: -1.5vh;
-        width: 60%;
-        height: 10vw;
-        font-size: 4vw;
+        width: 80vw;
+        height: 12vw;
+        font-size: 6vw;
         font-weight: bold;
         border-radius: 5px;
     }
@@ -374,7 +374,7 @@
       .overlay-content {
         position: relative;
         width: 100%;
-        max-width: 90vw;
+        max-width: 100vw;
         max-height: 80vh;
         display: flex;
         justify-content: center;
@@ -383,8 +383,8 @@
       
       .overlay-content img {
         width: auto;
-        margin: 0 6vw -2vw;
-        max-width: 90vw;
+        margin: 0 auto -2vw;
+        max-width: 100vw;
         max-height: 100%;
         animation: zoomIn 0.5s ease forwards;
         border-radius: 8px;
