--- a/src/style.css
+++ b/src/style.css
@@ -490,8 +490,8 @@
       .overlay-content {
         position: relative;
         width: 100%;
-        max-width: 90vw;
-        max-height: 80vh;
+        width: 90vw;
+        height: 80vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -499,9 +499,9 @@
       
       .overlay-content img {
         width: auto;
-        margin: 0 6vw -2vw;
-        max-width: 80vw;
-        max-height: 100%;
+        margin: 0 4vw 1vw;
+        width: 80vw;
+        height: 80%;
         animation: zoomIn 0.5s ease forwards;
         border-radius: 8px;
       }
